perf(admin): 탭을 열 때만 데이터를 불러온다 — 승인 열 번에 429가 나던 것
/api/** 는 사용자당 60회/분인데 관리자 화면이 그 한도에 실제로 부딪쳤다.
  진입 8회(대시보드·문제·문서·초안 2종·배지 2종 + 상단 복습 배지)
  + 초안 승인 1건마다 5회(승인·초안목록·배지·문제목록·대시보드)
이라 승인 열 번쯤에서 429가 났다. 하루에 17건을 승인한 날이 있었으니 닿는 한도다.

원인은 "보이지도 않는 탭까지 항상 최신으로 맞추려 한 것"이다. 두 가지를 바꿨다.

1) 진입 시에는 지금 보는 탭만 불러온다. 나머지는 그 탭을 처음 열 때 불러온다.
   배지 둘은 남겼다 — "몇 건 남았는가"는 탭을 열기 전에 알아야 의미가 있는 정보다.
2) 데이터가 바뀌면(승인·거절·등록·삭제) 보고 있는 탭만 즉시 다시 그리고,
   나머지 탭은 "불러옴" 표시만 지워 다음에 열 때 새로 불러오게 한다.

진입 8회 → 4회, 승인 1건 5회 → 3회. 분당 승인 가능 건수가 약 10건에서 18건이 된다.

캐시가 아니라 <한 번 불러왔는가>만 Set으로 기억한다. 값을 들고 있으면 무효화가 어려워지는데
여기서 필요한 건 "다시 부를지 말지"뿐이다.

적재 경로를 loadTab() 하나로 모았다. loadDrafts()를 직접 부르는 곳이 남으면 표시가 어긋나
같은 목록을 두 번 불러온다. 상태 필터를 바꾸는 자리(생성 직후·복구·필터 변경)는 지연 적재의
예외라 그때는 loadTab으로 즉시 불러온다.

TAB_LOADERS와 loadedTabs는 파일 상단 상태 변수 자리에 뒀다. initTabs()가 곧바로 읽는데
const는 호이스팅되지 않아, 함수 옆에 두면 이 파일에서 이미 두 번 난 TDZ 오류가 또 난다.

곁들여 보기 섞기 두 가지를 다듬었다.
- Collections.shuffle(list)는 JDK의 정적 Random 하나를 모든 스레드가 나눠 쓴다(시드가
  AtomicLong이라 경합). 요청 스레드에서 도는 코드이므로 ThreadLocalRandom을 명시한다.
- List.copyOf 방어 복사를 걷어냈다. 그 목록은 메서드가 방금 만든 지역 변수라 밖에서 바꿀
  경로가 없다. 남의 목록을 받을 때만 복사할 이유가 있다.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>